--- a/client/src/assets/css/globals.css
+++ b/client/src/assets/css/globals.css
@@ -4,12 +4,7 @@
 
 :root {
   --primary: #8caeff;
-}
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --secondary: #f03567;
 }
 
 @media (prefers-color-scheme: dark) {
